# docs/swagger.json
@@ -243,6 +243,10 @@
                     "type": "string",
                     "example": "emailexp@gmail.com"
                   },
+                  "isFavourite": {
+                    "type": "boolean",
+                    "example": true
+                  },
                   "photo": {
                     "type": "string",
                     "format": "binary",
@@ -252,9 +256,7 @@
                 "required": [
                   "name",
                   "phoneNumber",
-                  "contactType",
-                  "photo",
-                  "email"
+                  "contactType"
                 ]
               },
               "encoding": {
@@ -444,6 +446,10 @@
                   "email": {
                     "type": "string",
                     "example": "emailexp@gmail.com"
+                  },
+                  "isFavourite": {
+                    "type": "boolean",
+                    "example": true
                   },
                   "photo": {
                     "type": "string",
