# src/schemas/contactSchemas.js
@@ -4,6 +4,7 @@ export const createContactSchema = Joi.object({
   name: Joi.string().min(3).max(20).required(),
   phoneNumber: Joi.string().min(3).max(20).required(),
   email: Joi.string().email().min(3).max(20).optional(),
+  isFavourite: Joi.boolean().optional(),
   contactType: Joi.string().min(3).max(20).required(),
 });
 
@@ -11,5 +12,6 @@ export const updateContactSchema = Joi.object({
   name: Joi.string().min(3).max(20),
   phoneNumber: Joi.string().min(3).max(20),
   email: Joi.string().email().min(3).max(20),
+  isFavourite: Joi.boolean(),
   contactType: Joi.string().min(3).max(20),
 }).min(1);
